--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://reinhardtr.github.io/netflix-recreation",
   "name": "netflix-recreation",
   "version": "0.1.0",
   "private": true,
